--- a/templates/index.html
+++ b/templates/index.html
@@ -103,12 +103,13 @@
             
             <form id="deregisterForm">
                 <input type="email" 
-                       id="deregister_email" 
-                       name="tgtg_email" 
-                       placeholder="your-tgtg-account@example.com"
-                       required>
+                    id="deregister_email" 
+                    name="email"
+                    placeholder="your-tgtg-account@example.com"
+                    required>
                 <button type="submit" class="btn-danger">EXECUTE REMOVAL</button>
             </form>
+
             
             <div id="deregisterMessage"></div>
         </div>
